data/derived/fa15/progs/unify/prog4113.ml.out
Characters 124-140:
  (if (a1+x1+x2 >= 10) then 1 else 0,a1+x1+x2 :: a2) in
                                   ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
